--- a/README.html
+++ b/README.html
@@ -1,1 +1,4 @@
 i use html to create register page and login page using dependencies in which i add spring.data.mongodb to store data.
+You are using Bootstrap for most of the styling, but some additional custom styles are included for layout tweaks (e.g., centering the form and adding box shadow).
+The form has a light background with rounded corners, and the buttons are styled using Bootstrap classes.
+A simple link to the registration page is included as a placeholder (#).
